--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_carousel_slider: ^1.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
