--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   flutter_carousel_slider: ^1.1.0
   intl: ^0.20.2
+  supabase_flutter: ^2.3.4
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
