--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   intl: ^0.20.2
   supabase_flutter: ^2.3.4
   shared_preferences: ^2.2.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
