--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: sport_application
+name: Sportify
 description: "A new Flutter project."
 publish_to: "none"
 version: 0.1.0
@@ -14,7 +14,7 @@ dependencies:
   supabase_flutter: ^2.3.4
   shared_preferences: ^2.2.2
   uuid: ^4.5.1
-  flutter_map: ^6.1.0
+  flutter_map: ^8.1.1
   latlong2: ^0.9.0
   image_picker: ^1.0.7
   path: ^1.8.3
@@ -22,7 +22,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
