--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   latlong2: ^0.9.0
   image_picker: ^1.0.7
   path: ^1.8.3
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -26,3 +27,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  # Letakkan di bagian paling bawah file
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
